<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="@string/judul"
        android:textSize="22sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/panjang"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/lenght"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="numberDecimal"
        android:hint="@string/masukan_panjang"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lebar"
        android:layout_marginTop="8dp"/>
    <EditText
        android:id="@+id/width"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:inputType="numberDecimal"
        android:hint="@string/masukan_lebar"

        />
    <Button
        android:id="@+id/hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_luas"

        />

    <TextView
        android:id="@+id/luas"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:text="hasil"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/sendDataIntent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move"

        />
    <Button
        android:id="@+id/sendObject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendData"

        />


</LinearLayout>